# kwyk

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
kwyk/: _version.py  cli.py
nobrainer/: __init__.py  cli.py  cli_click.py  metrics.py  predict.py  validate.py
nobrainer/models/: __init__.py  bayesian_dropout.py  meshnetbvwn.py  meshnetbwn.py  meshnetcwn.py  meshnetvwn.py  meshnetwn.py  util.py
saved_models/all_50_bvwn_multi_prior/1556816070/: saved_model.pb
saved_models/all_50_bvwn_multi_prior/1556816070/variables/: variables.index
saved_models/all_50_bwn_09_multi/1555963478/: saved_model.pb
saved_models/all_50_bwn_09_multi/1555963478/variables/: variables.index
saved_models/all_50_wn/1555341859/: saved_model.pb
saved_models/all_50_wn/1555341859/variables/: variables.index
