[metadata]
name = kwyk
url = https://github.com/neuronets/kwyk
author = Kwyk Developers
author_email = jakub.kaczmarzyk@gmail.com
description = Knowing what you know - Bayesian brain parcellation
license = Apache License, 2.0
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    click >= 7.0
    nobrainer @ git+https://github.com/patrick-mcclure/nobrainer@3bd95fa2f3cd24add9457d650165098fef180ec7
    etelemetry
python_requires = >=3.6

[options.entry_points]
console_scripts =
    kwyk = kwyk.cli:predict

[options.extras_require]
cpu = tensorflow == 1.15
gpu = tensorflow-gpu == 1.15

[versioneer]
VCS = git
style = pep440
versionfile_source = kwyk/_version.py
versionfile_build = kwyk/_version.py
tag_prefix =
parentdir_prefix =
